# ai-auto-job-applier

./: README.md  main.py  pyproject.toml
src/app/agents/agent1/prompts/: __init__.py  prompts.py
src/app/agents/agent2/prompts/: __init__.py
