[project]
name = "ai-auto-job-applier"
version = "0.1.0"
description = "AI-powered automated job application system with FastAPI backend"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.118.0",
    "uvicorn>=0.37.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
dev-dependencies = []

