[project]
name = "base-repo-structure"
version = "0.1.0"
description = "Production-grade FastAPI boilerplate with Google ADK multi-agent architecture"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.118.0",
    "uvicorn>=0.37.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
dev-dependencies = []

